syntax = "proto3";

package v1;

option go_package = "/network/proto";

import "validate/validate.proto";

service Discovery {
    rpc FindPeers(FindPeersReq) returns (FindPeersResp);
}

message FindPeersReq {
    string key = 1[(validate.rules).string = {ignore_empty: true, pattern: "^[A-Za-z0-9]{1,}$"}];
    int64 count = 2[(validate.rules).int64 = {gt:0, lt: 17}]; // network/discovery/discovery.go => maxDiscoveryPeerReqCount
}

message FindPeersResp {
    repeated string nodes = 1; 
}
